[package]
name = "dur"
version = "0.1.0"
authors = ["Yagiz Degirmenci <yagizcanilbey1903@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
serde = { version = "1.0", features = ["derive"] }

serde_json = "*"