[package]
authors = ["Yagiz Degirmenci <yagizcanilbey1903@gmail.com>"]
edition = "2018"
name = "dur"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
clap = "2.33"
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
toml = "0.5"
